Link Sentinel deterministic core into Sentinel Strike and validate tick hashing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(sentinel_strike LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_subdirectory(external/sentinel-sim-core)
 add_subdirectory(src)
