Add deterministic missile kinematics update and per-tick position logging

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_executable(sentinel-strike
     main.cpp
     sam_radar.cpp
+    missile_launch.cpp
+    missile_kinematics.cpp
 )
 
 target_include_directories(sentinel-strike PRIVATE
