--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,23 @@
+find_package(OpenGL REQUIRED)
+find_package(SDL2 REQUIRED)
+
+# -------------------------------
+# strike-render
+# -------------------------------
+
+add_executable(strike-render
+    strike_render.cpp
+)
+
+target_link_libraries(strike-render
+    OpenGL::GL
+    SDL2::SDL2
+)
+
+# -------------------------------
+# sentinel-strike
+# -------------------------------
+
 add_executable(sentinel-strike
     main.cpp
     sam_radar.cpp
@@ -5,23 +25,6 @@ add_executable(sentinel-strike
     missile_kinematics.cpp
 )
 
-add_executable(strike-render
-    strike_render.cpp
-)
-
-target_include_directories(sentinel-strike PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-    ${PROJECT_SOURCE_DIR}/external/sentinel-sim-core/include
-)
-
-target_include_directories(strike-render PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-)
-
-target_link_libraries(sentinel-strike PRIVATE
+target_link_libraries(sentinel-strike
     simcore
-)
-
-target_link_libraries(strike-render PRIVATE
-    SDL2
 )
