stable before strike

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,14 @@
 find_package(OpenGL REQUIRED)
 find_package(SDL2 REQUIRED)
 
+include_directories(
+    ${PROJECT_SOURCE_DIR}/include
+    ${PROJECT_SOURCE_DIR}/external/sentinel-sim-core/include
+)
+
 # -------------------------------
 # strike-render
 # -------------------------------
-
 add_executable(strike-render
     strike_render.cpp
 )
@@ -18,12 +22,12 @@ target_link_libraries(strike-render
 # -------------------------------
 # sentinel-strike
 # -------------------------------
-
 add_executable(sentinel-strike
     main.cpp
     sam_radar.cpp
     missile_launch.cpp
     missile_kinematics.cpp
+    missile_guidance.cpp
 )
 
 target_link_libraries(sentinel-strike
