feat:(Render/functionality) Added appropriate camera angle

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable(sentinel-strike
     main.cpp
     strike_scenario.cpp
+    strike_record.cpp
     sam_radar.cpp
     missile_launch.cpp
     missile_guidance.cpp
@@ -16,6 +17,7 @@ target_link_libraries(sentinel-strike
 add_executable(strike-render
     strike_render.cpp
     strike_scenario.cpp
+    strike_record.cpp
     sam_radar.cpp
     missile_launch.cpp
     missile_guidance.cpp
